syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.purchase";
option java_outer_classname = "CustomerServiceProto";

package com.example.purchase;

import "google/protobuf/empty.proto";

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    double balance = 4;
}

message CustomerResponse {
    Customer customer = 1;
}

service CustomerService {
    rpc GetRandomCustomer (google.protobuf.Empty) returns (CustomerResponse);
    rpc UpdateCustomer (Customer) returns (google.protobuf.Empty);
}
